2009-05-03  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistBind.tcl: Improvements in the binding scripts
	* scripts/tablelistEdit.tcl: related to interactive cell editing.

2009-05-02  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:         Bumped the version number to 4.11.2.
	* COPYRIGHT.txt:

	* scripts/tablelistBind.tcl: Improvements in the binding scripts
	* scripts/tablelistEdit.tcl: related to interactive cell editing.

2009-04-11  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistEdit.tcl: Fixed a small bug related to interactive
	  cell editing with the aid of a text widget.

	* doc/tablelistWidget.html: Minor correction.

2009-03-28  Csaba Nemethi <csaba.nemethi@t-online.de>

	* tablelistPublic.tcl:         Added the labeltag subcommand and the
	* scripts/mwutil.tcl:          helper command
	* scripts/tablelistBind.tcl    tablelist::getTablelistColumn.
	* scripts/tablelistConfig.tcl:
	* scripts/tablelistUtil.tcl:
	* scripts/tablelistWidget.tcl:

	* scripts/tclIndex: Newly generated.

	* doc/tablelistBinding.html:   Updated to reflect the new features.
	* doc/tablelistWidget.html:

2009-03-14  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:         Bumped the version number to 4.11.1.
	* COPYRIGHT.txt:

	* scripts/tablelistBind.tcl: Made sure that <Double-Button-1> works as
	  expected for large lists, too.

	* scripts/tablelistEdit.tcl: Eliminated a small regression introduced
	  in tablelist 4.11.

2009-02-24  Csaba Nemethi <csaba.nemethi@t-online.de>

	* README.txt:                               Minor improvements.
	* ../../examples/tablelist/styles.tcl:
	* ../../examples/tablelist/styles_tile.tcl:

2009-02-23  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:              Bumped the version number to 4.11.
	* *.txt:
	* doc/tablelist.html:

	* scripts/*.tcl:            Added the -columntitles option; added two
	  virtual events related to hidden columns and rows; extended the